# form_zone_designer_with_orm_matcher

./: .env.example  .gitignore  AGENTS.md  FIELDINDEXER.md  README.md  app_designer.py  app_exporter.py  app_field_review.py  app_indexer.py  env.example  field_factory.py  field_indexer.py  fields.py  form_zone_designer.py  page.py  pyproject.toml  rectangle_detector.py  requirements.txt  test_indexer_validations.py  test_project_validations.py
.cursor/: AGENTS.md
USER_INSTRUCTIONS/: AGENTS.md  INSTRUCTIONS-1-Templates.md  build_html.py
runtime_assistants/: AGENTS.md  __init__.py
scripts/: smoke_indexer.py
tests/: AGENTS.md  test_design_assistant_match.py  test_design_assistant_schema.py  test_fiducial_paths.py
ui/: AGENTS.md  __init__.py  designer_analyse_preview_dialog.py  designer_button_layout.py  designer_edit_panel.py  designer_field_list.py  designer_main_image_widget.py  designer_rectangle_selected_dialog.py  designer_thumbnail_panel.py  designer_thumbnail_widget.py  field_config_dialog.py  grid_designer.py  index_comment_dialog.py  index_detail_panel.py  index_details_panel.py  index_main_image_panel.py  index_menu_bar.py  index_ocr_dialog.py  index_text_dialog.py  indexer_image_label.py  qc_comment_dialog.py  qc_text_review_window.py  table_row_divider.py
util/: AGENTS.md  __init__.py  app_state.py  cloud_vision_client.py  csv_manager.py  csv_save_queue.py  designer_config.py  designer_persistence.py  document_loader.py  fiducial_paths.py  field_manager.py  field_metadata.py  gemini_ocr_client.py  index_comments.py  indexer_validations.py  (+7 more)
(+44 files in other folders)
